# JarvisNew

./: .env.example  .gitignore  ARCHITECTURE.md  FINAL_START.py  INFINITE_LEARNING_README.md  JARVIS_Menu.bat  LICENSE  MANIFEST.in  NEW_STRUCTURE_GUIDE.md  README.md  RUN_WITH_GPU.bat  TEST_GPU_LOAD.bat  autonomous_web_learning.py  diagnose_async.py  diagnose_gpu_full.py  diagnose_wikipedia.py  fix_continuous_inline.py  fix_everything_auto.py  fix_final.py  fix_gpu_activation.py  fix_jarvis_continuous.py  fix_rtx_4070_ti_super.py  fix_task_manager.py  fix_voice_issues.py  improved_web_learning.py  integrate_extended_gui.py  integrate_fullweb.py  integrate_hybrid.py  integrate_improved.py  integrate_infinite.py  integrate_infinite_v2.py  integrate_turbo.py  integrate_web_learning.py  integrate_working.py  jarvis_gui.py  main.py  pyproject.toml  quick_start_infinite.py  quick_test_wikipedia.py  requirements.txt  (+16 more)
backup_before_restructure/: jarvis_gui_extended.py  requirements.txt
config/: config.json  learning_topics.json  personality.json  turbo_learning.json  turbo_optimized.json  user_profile.json
core/: continuous_learning.py  learning_system.py  nlp_processor.py
data/: README.md  continuous_learning_stats.json
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  QUICKSTART.md  REALTIME_MONITORING.md  RESTRUCTURE_CHECKLIST.md
jarvis/: __main__.py  assistant.py
logs/: README.md
models/: README.md
modules/: file_manager.py  system_control.py  task_manager.py  web_search.py
scripts/: README.md  auto_gpu_setup.py  auto_gpu_setup_v2.py  setup_git.py  (+8 more)
(+229 files in other folders)
